Исправление предупреждений TeX в главе с примерами систем защиты

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1530,6 +1530,17 @@
 	language	= {English},
 }
 
+@misc{Dunkelman:Keller:Shamir:2010,
+    author          = {Dunkelman, Orr and Keller, Nathan and Shamir, Adi},
+    title           = {A Practical-Time Attack on the A5/3 Cryptosystem Used in Third Generation GSM Telephony},
+    howpublished    = {Cryptology ePrint Archive, Report 2010/013},
+    year            = {2010},
+    month           = {1},
+    date            = {10},
+    url             = {https://ia.cr/2010/013},
+    language        = {English},
+}
+
 @article{Martinez:Encinas:Avila:2010,
 	author		= {Martínez, Víctor Gayoso and Encinas, Luis Hernandez and Ávila, Carmen Sánchez},
 	title		= {A Survey of the Elliptic Curve Integrated Encryption Scheme},
