--- a/secure-systems-examples/ipsec.tex
+++ b/secure-systems-examples/ipsec.tex
@@ -5,9 +5,9 @@
 
 IPsec определяет:
 \begin{itemize}
-    \item первичную аутентификацию сторон и управление сеансовыми ключами (протокол IKE, Internet Key Exchange);\index{протокол!IKE}
-    \item шифрование с аутентификацией (протокол ESP, Encapsulating Security Payload);\index{протокол!ESP}
-    \item только аутентификацию сообщений (протокол AH, Authentication Header).\index{протокол!AH}
+    \item первичную аутентификацию сторон и управление сеансовыми ключами (протокол IKE, \langen{Internet Key Exchange});\index{протокол!IKE}
+    \item шифрование с аутентификацией (протокол ESP, \langen{Encapsulating Security Payload});\index{протокол!ESP}
+    \item только аутентификацию сообщений (протокол AH, \langen{Authentication Header}).\index{протокол!AH}
 \end{itemize}
 Основное (современное) применение этих протоколов состоит в построении VPN\index{протокол!VPN} (Virtual Private Network -- виртуальная частная сеть) при использовании IPsec в так называемом туннельном режиме.
 
@@ -51,12 +51,12 @@ IPsec определяет:
 
                 По значениям идентификаторов $ID_I, ID_R$ сторона $R$ проверяет знание стороной $I$ ключей $Ke, Ka$.
 
-                Поле $A_I$ обеспечивает аутентификацию стороны $I$ стороне $R$ одним из двух способов. Если используются сертификаты, то $I$ показывает, что обладает закрытым ключом, парным открытому ключу сертификата $C_I$, подписывая сообщение $data$:
-                    \[ A_I = \textrm{ЭП}(data). \]
+                Поле $A_I$ обеспечивает аутентификацию стороны $I$ стороне $R$ одним из двух способов. Если используются сертификаты, то $I$ показывает, что обладает закрытым ключом, парным открытому ключу сертификата $C_I$, подписывая сообщение $\textrm{data}$:
+                    \[ A_I = \textrm{ЭП}(\textrm{data}). \]
                 Сторона $R$ также проверяет сертификат $C_I$ по цепочке до доверенного сертификата верхнего уровня.
 
                 Второй вариант аутентификации -- по общему секретному симметричному ключу аутентификации $K_{IR}$, который заранее был создан $I$ и $R$, как в Kerberos. Сторона $I$ показывает, что знает общий секрет, вычисляя
-                    \[ A_I = PRF( PRF(K_{IR}, ~ \text{текст ''Key Pad for IKEv2''}), ~ data). \]
+                    \[ A_I = \textrm{PRF}( \textrm{PRF}(K_{IR}, ~ \text{текст ''Key Pad for IKEv2''}), \textrm{data}). \]
                 Сторона $R$ сравнивает присланное значение $A_I$ с вычисленным и убеждается, что $I$ знает общий секрет.
 
                 Сообщение $data$ -- это открытое сообщение данной транзакции, за исключением нескольких полей.
