--- a/secure-systems-examples/gsm3.tex
+++ b/secure-systems-examples/gsm3.tex
@@ -18,21 +18,21 @@
 
 Обозначения на рис.~\ref{fig:gsm3} следующие:
 \begin{itemize}
-    \item $K$ -- общий секретный 128-битовый ключ SIM-карты и центра аутентификации;
-    \item $\textrm{RAND}$ -- 128-битовое псевдослучайное число, создаваемое центром аутентификации;
-    \item $\textrm{SQN}_{\textrm{T}}, \textrm{SQN}_{\textrm{Ц}}$ -- 48-битовые счётчики для защиты от атак воспроизведения;
-    \item $\textrm{AMF}$ -- 16-битовое значение окна для проверки синхронизации счётчиков;
-    \item $CK, IK, AK$ -- 128-битовые ключи шифрования данных $CK$, кода аутентификации данных $IK$, гаммы значения счётчика $AK$;
-    \item $\MAC, \textrm{XMAC}$ -- 128-битовые аутентификаторы центра SIM-карте;
-    \item $\textrm{RES}, \textrm{XRES}$ -- 128-битовые аутентификаторы SIM-карты центру;
-    \item $\textrm{AUTN}$ -- вектор аутентификации.
+    \item K -- общий секретный 128-битовый ключ SIM-карты и центра аутентификации;
+    \item RAND -- 128-битовое псевдослучайное число, создаваемое центром аутентификации;
+    \item $\textrm{SQN}_{\textrm{T}}$, $\textrm{SQN}_{\textrm{Ц}}$ -- 48-битовые счётчики для защиты от атак воспроизведения;
+    \item AMF -- 16-битовое значение окна для проверки синхронизации счётчиков;
+    \item CK, IK, AK -- 128-битовые ключи шифрования данных CK, кода аутентификации данных IK, гаммы значения счётчика AK;
+    \item MAC, XMAC -- 128-битовые аутентификаторы центра SIM-карте;
+    \item RES, XRES -- 128-битовые аутентификаторы SIM-карты центру;
+    \item AUTN -- вектор аутентификации.
 \end{itemize}
 
 Алгоритмы $fi$ не фиксированы стандартом и выбираются при реализациях.
 
 Из оставшихся недостатков защиты персональных данных можно перечислить.
 \begin{enumerate}
-    \item Уникальный идентификатор SIM-карты IMSI по-прежнему передаётся в открытом виде, что позволяет идентифицировать абонентов по началу сеанса регистрации SIM-карты в сети.
+    \item Уникальный идентификатор SIM-карты IMSI (\langen{International Mobile Subscriber Identity}) по-прежнему передаётся в открытом виде, что позволяет злоумышленнику идентифицировать абонентов по началу сеанса регистрации SIM-карты в мобильной сети.
     \item Шифрование и аутентификация производятся только между телефоном и базовой станцией, а не между двумя телефонами. Это является необходимым условием для подключения СОРМ (Система технических средств для обеспечения функций оперативно-розыскных мероприятий) по закону <<О связи>>. С другой стороны, это повышает риск нарушения конфиденциальности персональных данных.
-    \item Алгоритм шифрования данных A5/3 (KASUMI) на 128-битовом ключе теоретически взламывается атакой на основе известного открытого текста для 64 MB данных с использованием 1 GiB памяти $2^{32}$ операциями (2 часа на обычном ПК).
+    \item Алгоритм шифрования A5/3\index{шифр!A5/3} (KASUMI)\index{шифр!KASUMI} на 128-би\-то\-вом ключе теоретически взламывается атакой на связанных ключах основе известного открытого текста для 64 MB данных с использованием 1 GiB памяти за $2^{32}$ операций (2 часа на обычном ПК 2010 года,~\cite{Dunkelman:Keller:Shamir:2010}).
 \end{enumerate}
