Исправление предупреждений TeX в приложениях

--- a/appendix/coincide-index_method.tex
+++ b/appendix/coincide-index_method.tex
@@ -14,8 +14,9 @@
     \[ I_c(\mathcal{P}_1), \]
 то есть вероятность того, что в случайно выбранной паре позиций находятся одинаковые буквы.
 
-Для пары позиций $(k,j)$ найдём условную вероятность $P \left( X_k  = X_j \mid (k,j) \right)$:
+Для пары позиций $(k,j)$ найдём условную вероятность того, что на этих позициях находятся одинаковый символ:
     \[ P \left( X_k  = X_j \mid (k,j) \right) ~=~ \sum\limits_{i=1}^A p_{1i}^2 ~\equiv~ k_{p_1}. \]
+
 Эта вероятность не зависит от выбора пары позиций $(k,j)$.
 
 Так как число различных пар равно $\frac{L(L - 1)}{2}$, то вероятность случайного выбора пары $(k,j)$ равна
