--- a/appendix/questions-4.tex
+++ b/appendix/questions-4.tex
@@ -1,4 +1,4 @@
-\section{Для курса <<Защита информации>>}
+\section{Курс <<Защита информации>>}
 \selectlanguage{russian}
 
 Список вопросов по курсу <<Защита информации>> кафедры радиотехники и систем управления МФТИ для 4-го курса.
@@ -30,20 +30,20 @@
     \item PKI. Централизованная и децентрализованная схема реализации. Использование на примере программ серии PGP, протокола HTTPS, для защиты ПО.
     \item Протоколы аутентификации и идентификации сторон на основе систем симметричного шифрования. Построение, плюсы и минусы, криптографическая стойкость на примере протоколов Yahalom и Нидхема-Шрёдера.
     \item Протоколы аутентификации и идентификации сторон на основе систем асимметричного шифрования. Построение, плюсы и минусы, криптографическая стойкость на примере протокола DASS, Деннинга-Сакко или Ву-Лама.
-    \item Протоколы распространения ключей. Протокол Диффи-Хеллмана для мультипликативной группы и для группы точек эллиптической кривой.
+    \item Протоколы распространения ключей. Протокол Диффи-Хелл\-ма\-на для мультипликативной группы и для группы точек эллиптической кривой.
     \item Протоколы распространения ключей. Протоколы MTI, STS, Жиро (два на выбор).
     \item Квантовый протокол распространения ключей BB84.
     \item Разделение секрета. Пороговые схемы разделения секрета Шамира и Блэкли (подробно).
     \item Протокол распространения ключей на схеме Блома. Анализ криптостойкости, примеры использования и взлома.
     \item Атака на переполнение буфера. Причины и последствия. Детальное описание (без примера на ассемблере), программные и аппаратные способы защиты: безопасные функции, security cookies, DEP, ASLR, etc.
     \item Атаки на плохие указатели. Причины и последствия. Детальное описание (без примера на ассемблере).
-    \item Атаки на ошибки контроля данных, примеры с printf, HTML+HTTP+SQL, HTTP+HTML+JavaScript. Directory traversal, альтернативные имена файлов в NTFS.
-    \item Атаки на некорректное применение криптоалгоритмов и нестрогое следование стандартам. Примеры с вектором инициализации в CBC, с многоразовыми блокнотами, с проверкой длины хеша.
+    \item Атаки на ошибки контроля данных, примеры с printf, \foreignlanguage{english}{SQL injection, JavaScript injection. Directory traversal}, альтернативные имена файлов в NTFS.
+    \item Атаки на некорректное применение криптографических алгоритмов и нестрогое следование стандартам. Примеры с вектором инициализации в CBC, с многоразовыми блокнотами, с проверкой длины хеша.
     \item Атаки на плохие генераторы псевдослучайной последовательности. Примеры с Netscape SSL, WinZIP, PHP.
     \item Доверенная среда исполнения программного обеспечения. Средства реализации для настольных и мобильных систем, методы обхода.
     \item Протокол Kerberos. Математическое описание, описание реализации (v4 или v5 на выбор).
     \item Протокол IPsec (подробно).
-    \item Порядок разработки технических и криптографических средств защиты информации в РФ.
+    \item Порядок разработки технических и криптографических средств защиты информации в Российской Федерации.
     \item Порядок разработки системы управления защитой информации по ISO2700x.
     \item Китайская теорема об остатках. Доказательство, использование для защиты информации. Использование КТО при доказательстве корректности криптосистемы RSA.
     \item <<Длинная>> модульная арифметика, использование в криптографии. Быстрое <<левое>> и <<правое>> возведение в степень, расширенный алгоритм Евклида.
