--- a/appendix/questions-5.tex
+++ b/appendix/questions-5.tex
@@ -1,4 +1,4 @@
-\section{Для курса <<Криптографические протоколы>>}
+\section{Курс <<Криптографические протоколы>>}
 \selectlanguage{russian}
 
 Список вопросов по курсу <<Криптографические протоколы>> кафедры защиты информации МФТИ для 5-го курса.
@@ -26,7 +26,7 @@
     \item Протокол B92 / BB92. Описание, плюсы и минусы, возможные атаки, известные модификации.
 
     \item База данных на основе Echo-сети. Blockchain. Доказательство работы (proof-of-work, proof-of-share). BitCoin.
-    \item Аутентификация в WEB. Basic, Digest, form- и cookie-аутентификация, местоположение аутентификационных данных в HTTP-сообщении (path, headers, body). Использование HTTPS для аутентификации клиента.
+    \item Аутентификация в WEB. Basic, Digest, form- и cookie-ау\-тен\-ти\-фи\-ка\-ция, местоположение аутентификационных данных в HTTP-сообщении (path, headers, body). Использование HTTPS для аутентификации клиента.
     \item Аутентификация в WEB. Протокол OAuth 2.0. Использование JWT.
 
 \end{enumerate}
