Исправление предупреждений TeX в главе про программные уязвимости

--- a/software-security/index.tex
+++ b/software-security/index.tex
@@ -15,7 +15,7 @@
 
 Первый червь для Интернета, червь Морриса, 1988 г., уже использовал \emph{смешанные} атаки\index{атака!смешанная} для заражения UNIX машин~\cite{EichinRochlis:1988, Spafford:1989}. Сначала программа получала доступ к удалённому запуску команд, эксплуатируя уязвимости в сервисах \texttt{sendmail}, \texttt{finger} (с использованием атаки на переполнение буфера) или \texttt{rsh}. Далее, с помощью механизма подбора паролей червь получал доступ к локальным аккаунтам пользователей:
 \begin{itemize}
-    \item получение доступа к учётным записям с очевидными паролями:
+    \item получение доступа к учётным записям с простыми паролями:
 		\begin{itemize}
 			\item без пароля вообще;
 			\item имя аккаунта в качестве пароля;
@@ -24,8 +24,8 @@
 			\item фамилия (\langen{last name, family name});
 			\item фамилия, записанная задом наперёд;
 		\end{itemize}
-		\item перебор паролей на основе встроенного словаря из 432 слов;
-		\item перебор паролей на основе системного словаря \texttt{/usr/dict/words}.
+	\item перебор паролей на основе встроенного словаря из 432 слов;
+	\item перебор на основе системного словаря \texttt{/usr/dict/words}.
 \end{itemize}
 
 \emph{Программной уязвимостью}\index{программная уязвимость} называется свойство программы, позволяющее нарушить её работу. Программные уязвимости могут приводить к отказу в обслуживании (Denial of Service, DoS-атака)\index{атака!отказ в обслуживании}, утечке и изменению данных, появлению и распространению вирусов и червей.
