--- a/software-security/xss.tex
+++ b/software-security/xss.tex
@@ -13,7 +13,8 @@
 
 %Когда браузер первый раз обращается к сайту, веб-приложение может выслать вместе с HTML страницей cookie-файл, хранящий текстовую строку последовательностей
 
-Пусть аутентификатор пользователя в cookie-файле сайта \texttt{myemail.com} содержит
+Пусть аутентификатор пользователя в cookie-строке от сайта \texttt{myemail.com} содержит следующие данные:
+
 \begin{center} \begin{verbatim}
 auth=AJHVML43LDSL42SC6DF;
 \end{verbatim} \end{center}
