--- a/software-security/sql-injections.tex
+++ b/software-security/sql-injections.tex
@@ -3,15 +3,15 @@
 
 Второй классической уязвимостью веб-приложений являются SQL-инъекции (\langen{SQL injection}), когда пользователь имеет возможность поменять смысл запроса к базе данных веб-сервера. Запрос делается в виде текстовой строки на скриптовом языке SQL. Например, выражение
 \begin{verbatim}
-s = "SELECT * FROM Users WHERE Name = '" + username + "';"
+"SELECT * FROM Users WHERE Name = '" + username + "';"
 \end{verbatim}
-предназначено для получения информации о пользователе \texttt{username}. Однако если пользователь вместо имени введёт строку вида
+предназначено для получения информации о пользователе, имя (логин) которого задан переменной \texttt{username}. Однако если пользователь вместо имени введёт строку вида
 \begin{center} \begin{verbatim}
 john';  DELETE * FROM Users;  SELECT * FROM Users WHERE
   Name = 'john,
 \end{verbatim} \end{center}
 то выражение превратится в три SQL-операции:
-%{\color{red} Проверить в каких системах будет работать. В JDBC PrepareStatement требует одно выражение, а ExecutableStatement использовать нельзя, так как он не возвращает значения.}
+
 \begin{verbatim}
 -- запрос о пользователе john
 SELECT * FROM Users WHERE Name = 'john';
