--- a/user-authentication/openid.tex
+++ b/user-authentication/openid.tex
@@ -6,8 +6,8 @@
 Принцип аутентификации состоит в следующем.
 \begin{enumerate}
     \item Пользователи и интернет-сервисы доверяют аутентификацию третьей стороне -- центру единой аутентификации.
-    \item Когда пользователь заходит на интернет-ресурс, веб-приложение перенаправляет его на центр аутентификации с защитой TLS-соединением.
-    \item Центр аутентифицирует пользователя и выдаёт ему токен аутентификации, который пользователь предъявляет интернет-сервису.
+    \item Когда пользователь заходит на интернет-ресурс, веб-при\-ло\-же\-ние перенаправляет его на центр аутентификации с защитой TLS-соединением.
+    \item Центр аутентифицирует пользователя и выдаёт ему токен аутентификации, который пользователь предъявляет ин\-тер\-нет-сер\-ви\-су.
     \item Сервис по токену аутентификации определяет имя пользователя.
 \end{enumerate}
 
